--- a/example/package.json
+++ b/example/package.json
@@ -1,12 +1,12 @@
 {
   "name": "anyline-cordova-example",
-  "version": "43.0.0",
+  "version": "44.1.0",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "reinstall": "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add android@latest && cordova plugin add ../plugin",
-    "reinstall-ios": "cordova platform remove ios; cordova plugin remove io-anyline-cordova; cordova platform add ios@latest; cordova plugin add ../plugin; cordova build ios",
+    "reinstall-ios": "cordova platform remove ios; cordova plugin remove io-anyline-cordova; cordova platform add ios@latest; cordova plugin add ../plugin",
     "reinstall-win": "cordova platform remove windows && cordova plugin remove io-anyline-cordova && cordova platform add windows@latest && cordova plugin add ../plugin",
     "overwrite": "rm -R ../src/android/io && rm -R ../src/android/res && cp -R platforms/android/src/io ../src/android/ && cp -R platforms/android/res ../src/android",
     "overwrite-ios": "rm -R ../plugin/src/ios; cp -R platforms/ios/Anyline\\ Cordova\\ Example/Plugins/io-anyline-cordova ../plugin/src/ios",
@@ -23,7 +23,6 @@
       "io-anyline-cordova": {}
     },
     "platforms": [
-      "android",
       "ios"
     ]
   },
@@ -31,6 +30,7 @@
     "cordova-ios": "^6.2.0",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-file": "^7.0.0",
-    "io-anyline-cordova": "file:../plugin"
+    "io-anyline-cordova": "file:../plugin",
+    "xml-js": "^1.6.11"
   }
 }
