Update cordova-ios version

--- a/example/package.json
+++ b/example/package.json
@@ -23,13 +23,13 @@
       "io-anyline-cordova": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   },
   "devDependencies": {
     "cordova-android": "^11.0.0",
-    "cordova-ios": "^6.2.0",
+    "cordova-ios": "^6.3.0",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-file": "^7.0.0",
     "io-anyline-cordova": "file:../plugin",
