--- a/plugin/src/android/build.gradle
+++ b/plugin/src/android/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.anyline:anylinesdk:46.1.0'
+    implementation 'io.anyline:anylinesdk:47.1.0'
     implementation("com.google.android.material:material:1.4.0-rc01")
 }
 
@@ -29,21 +29,46 @@ android {
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/LICENSE'
 
-        def anylineRetainAssetsPattern = '';
+        // Below is the full list of modules
+        def all_modules = [
+                "module_anyline_ocr",
+                "module_barcode",
+                "module_document",
+                "module_energy",
+                "module_id",
+                "module_license_plate",
+                "module_tire"
+        ].toList()
+
+        def used_modulesString = ''
         new XmlSlurper().parse(file('../app/src/main/res/xml/config.xml')).preference.each {
             if (it.@name.text() == 'anyline-retain-assets-pattern') {
-                anylineRetainAssetsPattern = it.@value.text().toLowerCase()
+                used_modulesString = it.@value.text().toLowerCase()
             }
         }
 
-        if (!anylineRetainAssetsPattern.empty) {
-            println "Anyline: retain assets pattern --> $anylineRetainAssetsPattern"
-            aaptOptions {
-                retainAssetsPattern "$anylineRetainAssetsPattern"
+        def used_modules
+
+        // Convert the string to a list
+        if (!used_modulesString.isEmpty()) {
+            used_modules = used_modulesString.split(":")
+        }
+
+        if (used_modules) {
+
+            // All used modules are kept, the rest are discarded (to shrink your app)
+            all_modules.removeAll(used_modules)
+
+            def all_removed_modules = all_modules.join(":")
+
+            if (!all_removed_modules.isEmpty()) {
+                aaptOptions {
+                    println "Anyline: ignore assets pattern --> $all_removed_modules"
+                    ignoreAssetsPattern all_removed_modules
+                }
             }
         }
     }
-
 }
 
 ext.postBuildExtras = {
