replace SRCROOT with PROJECT_DIR

--- a/example/package.json
+++ b/example/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test-ios-size": "source $HOME/.nvm/nvm.sh; nvm use 20; rm -rf {platforms,plugins,package-lock.json}; npm i; cordova platform add ios; cordova build ios --debug --device; du -h 'platforms/ios/build/Debug-iphoneos/Anyline Cordova Example.ipa'",
     "addPlugins": "cordova plugin add cordova-plugin-android-permissions && cordova plugin add cordova-plugin-device && cordova plugin add ../plugin",
     "reinstall": "cordova platform remove android && cordova plugin remove io-anyline-cordova && cordova platform add android@latest && yarn addPlugins",
     "reinstall-ios": "cordova platform remove ios; cordova plugin remove io-anyline-cordova; cordova platform add ios@latest; cordova plugin add ../plugin",
@@ -32,7 +33,7 @@
   },
   "devDependencies": {
     "cordova-android": "^12.0.0",
-    "cordova-ios": "^6.3.0",
+    "cordova-ios": "^7.0.0",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-dialogs": "^2.0.2",
