--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "47.1.0",
+  "version": "50.0.2",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -32,12 +32,15 @@
   },
   "devDependencies": {
     "cordova-android": "^12.0.0",
-    "cordova-ios": "^6.3.0",
+    "cordova-ios": "^7.0.0",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-file": "^7.0.0",
     "io-anyline-cordova": "file:../plugin",
     "xml-js": "^1.6.11"
+  },
+  "dependencies": {
+    "cordova": "^12.0.0"
   }
 }
