--- a/plugin/src/android/build.gradle
+++ b/plugin/src/android/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.anyline:anylinesdk:47.1.0'
+    implementation 'io.anyline:anylinesdk:50.0.2'
     implementation("com.google.android.material:material:1.4.0-rc01")
 }
 
@@ -76,6 +76,11 @@ ext.postBuildExtras = {
         compileOptions {
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
+        }
+        packagingOptions {
+            jniLibs {
+                useLegacyPackaging = true
+            }
         }
     }
 }
