--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "50.0.2",
+  "version": "51.0.1",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -22,17 +22,16 @@
       },
       "cordova-plugin-dialogs": {},
       "cordova-plugin-android-permissions": {},
-      "cordova-plugin-device": {},
-      "io-anyline-cordova": {}
+      "cordova-plugin-device": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "devDependencies": {
-    "cordova-android": "^12.0.0",
-    "cordova-ios": "^7.0.0",
+    "cordova-android": "^12.0.1",
+    "cordova-ios": "^7.0.1",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-dialogs": "^2.0.2",
