Restore license key to placeholder and the io-anyline-cordova line on package.json.

--- a/example/package.json
+++ b/example/package.json
@@ -22,7 +22,8 @@
       },
       "cordova-plugin-dialogs": {},
       "cordova-plugin-android-permissions": {},
-      "cordova-plugin-device": {}
+      "cordova-plugin-device": {},
+      "io-anyline-cordova": {}
     },
     "platforms": [
       "ios",
