--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anyline-cordova-example",
-  "version": "51.0.2",
+  "version": "51.3.1",
   "description": "Cordova plugin for implementing Anyline",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,8 @@
     "reinstall-win": "cordova platform remove windows && cordova plugin remove io-anyline-cordova && cordova platform add windows@latest && cordova plugin add ../plugin",
     "overwrite": "rm -R ../src/android/io && rm -R ../src/android/res && cp -R platforms/android/src/io ../src/android/ && cp -R platforms/android/res ../src/android",
     "overwrite-ios": "rm -R ../plugin/src/ios; cp -R platforms/ios/Anyline\\ Cordova\\ Example/Plugins/io-anyline-cordova ../plugin/src/ios",
-    "cleanup": "cordova platform remove android && cordova platform remove ios && cordova platform remove windows && cordova plugin remove io-anyline-cordova"
+    "cleanup": "cordova platform remove android && cordova platform remove ios && cordova platform remove windows && cordova plugin remove io-anyline-cordova",
+    "build-ios": "cordova build ios --release --device --buildConfig=build.json"
   },
   "author": "Daniel Albertini | Jonas Laux",
   "license": "ISC",
@@ -26,8 +27,8 @@
       "io-anyline-cordova": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "devDependencies": {
