--- a/plugin/src/android/build.gradle
+++ b/plugin/src/android/build.gradle
@@ -1,14 +1,14 @@
 repositories {
     google()
     jcenter()
-    maven { url 'https://anylinesdk.blob.core.windows.net/maven/' }
+    maven { url 'https://mobile-sdk-android.anyline.io/release/' }
     flatDir {
         dirs 'libs'
     }
 }
 
 dependencies {
-    implementation 'io.anyline:anylinesdk:51.1.0'
+    implementation 'io.anyline:anylinesdk:51.3.1'
     implementation("com.google.android.material:material:1.4.0-rc01")
 }
 
