Wrapper Information Monitoring
https://documentation.anyline.com/ios-sdk-component/latest/wrapper-information-monitoring.html

--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -24,6 +24,10 @@
             <string>Allow Anyline to access your camera?</string>
         </config-file>
 
+        <config-file target="*-Info.plist" parent="AnylineCordovaPluginVersion">
+            <string>51.3.1</string>
+        </config-file>
+
         <!-- Anyline SDK Cordova Plugin Source for iOS -->
         <header-file src="src/ios/AnylineSDKPlugin.h"/>
         <source-file src="src/ios/AnylineSDKPlugin.m"/>
