--- a/plugin/src/android/build.gradle
+++ b/plugin/src/android/build.gradle
@@ -8,12 +8,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.anyline:anylinesdk:53.3.0'
+    implementation 'io.anyline:anylinesdk:54.0.0'
     implementation("com.google.android.material:material:1.4.0-rc01")
+    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.2.2")
 }
 
 android {
-
     defaultConfig {
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a"
@@ -21,6 +21,7 @@ android {
     }
 
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -74,6 +75,7 @@ android {
 ext.postBuildExtras = {
     android {
         compileOptions {
+            coreLibraryDesugaringEnabled true
             sourceCompatibility JavaVersion.VERSION_1_8
             targetCompatibility JavaVersion.VERSION_1_8
         }
