--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,21 +14,23 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: '23'
 
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test
+      - name: Update version to alpha
+        run: npm version prepatch --preid=alpha
 
       - name: Publish to npm
-        run: npm publish
+        run: |
+          cd plugin
+          npm publish --tag alpha --dry-run
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
