--- a/plugin/src/android/build.gradle
+++ b/plugin/src/android/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.anyline:anylinesdk:55.2.1'
+    implementation 'io.anyline:anylinesdk:55.4.0'
     implementation("com.google.android.material:material:1.4.0-rc01")
     coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.2.2")
 }
@@ -81,7 +81,7 @@ ext.postBuildExtras = {
         }
         packagingOptions {
             jniLibs {
-                useLegacyPackaging = true
+                useLegacyPackaging = false
             }
         }
     }
