--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    xmlns:android="http://schemas.android.com/apk/res/android" id="io-anyline-cordova" version="55.4.0">
+    xmlns:android="http://schemas.android.com/apk/res/android" id="io-anyline-cordova" version="55.5.0">
 
     <name>AnylineSDK</name>
 
@@ -27,14 +27,6 @@
         <!-- Anyline SDK Cordova Plugin Source for iOS -->
         <header-file src="src/ios/AnylineSDKPlugin.h"/>
         <source-file src="src/ios/AnylineSDKPlugin.m"/>
-        <header-file src="src/ios/ALPluginHelper.h"/>
-        <source-file src="src/ios/ALPluginHelper.m"/>
-        <header-file src="src/ios/ALPluginScanViewController.h"/>
-        <source-file src="src/ios/ALPluginScanViewController.m"/>
-        <header-file src="src/ios/ALRoundedView.h"/>
-        <source-file src="src/ios/ALRoundedView.m"/>
-        <header-file src="src/ios/ALCordovaUIConfiguration.h"/>
-        <source-file src="src/ios/ALCordovaUIConfiguration.m"/>
 
         <!-- Anyline Framework & Resource Bundle locally -->
         <!-- <framework custom="true" src="src/ios/anyline_sdk/Anyline.xcframework"/>-->
@@ -48,7 +40,7 @@
                 <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="Anyline" type="podspec" spec="55.4.0" />
+                <pod name="Anyline" type="podspec" spec="55.5.0" />
             </pods>
         </podspec>
 
@@ -84,24 +76,18 @@
             <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode"/>
         </config-file>
         <config-file parent="/manifest/application" target="AndroidManifest.xml">
-            <activity android:name="io.anyline.cordova.ScanActivity" android:theme="@style/AppTheme" />
+            <activity android:name="io.anyline2.wrapper.WrapperScanActivity" />
         </config-file>
 
         <!-- add plugin source code -->
-        <source-file src="src/android/io/anyline/cordova/ScanActivity.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/AnylinePlugin.java" target-dir="src/io/anyline/cordova"/>
         <source-file src="src/android/io/anyline/cordova/ResultReporter.java" target-dir="src/io/anyline/cordova"/>
-        <source-file src="src/android/io/anyline/cordova/Offset.java" target-dir="src/io/anyline/cordova"/>
-        <source-file src="src/android/io/anyline/cordova/RotateButtonConfig.java" target-dir="src/io/anyline/cordova"/>
 
         <resource-file src="src/android/res/values/anyline_sdk_plugin_strings.xml" target="res/values/anyline_sdk_plugin_strings.xml"/>
         <resource-file src="src/android/res/values/anyline_sdk_plugin_colors.xml" target="res/values/anyline_sdk_plugin_colors.xml"/>
-        <resource-file src="src/android/res/layout/activity_scan.xml" target="res/layout/activity_scan.xml"/>
         <resource-file src="src/android/res/values/styles.xml" target="res/values/styles.xml"/>
         <resource-file src="src/android/res/drawable/right_arrow.png" target="res/drawable/right_arrow.png"/>
-        <resource-file src="src/android/res/drawable/rotate_screen_background.xml" target="res/drawable/rotate_screen_background.xml"/>
-        <resource-file src="src/android/res/drawable/rotate_screen_white.png" target="res/drawable/rotate_screen_white.png"/>
 
-    </platform>
+   </platform>
 
 </plugin>
