--- a/example/www/assets/config/barcodeContinuousConfig.json
+++ b/example/www/assets/config/barcodeContinuousConfig.json
@@ -67,7 +67,7 @@
   "options": {
     "doneButtonConfig": {
       "title": "OK",
-      "type": "rect",
+      "fillType": "rect",
       "cornerRadius": 0,
       "textColor": "FFFFFF",
       "textColorHighlighted": "CCCCCC",
