--- a/example/www/assets/config/barcodePDF417Config.json
+++ b/example/www/assets/config/barcodePDF417Config.json
@@ -52,7 +52,7 @@
   "options": {
     "doneButtonConfig": {
       "title": "OK",
-      "type": "rect",
+      "fillType": "rect",
       "cornerRadius": 0,
       "textColor": "FFFFFF",
       "textColorHighlighted": "CCCCCC",
