--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    xmlns:android="http://schemas.android.com/apk/res/android" id="io-anyline-cordova" version="55.6.2">
+    xmlns:android="http://schemas.android.com/apk/res/android" id="io-anyline-cordova" version="55.7.0">
 
     <name>AnylineSDK</name>
 
     <!--Add Platform specific Files-->
-    <platform name="ios">
+    <platform name="ios" package="swift">
         <hook type="before_plugin_uninstall" src="scripts/ios/before_plugin_uninstall.js" />
         <hook type="after_plugin_install" src="scripts/ios/after_plugin_install.js" />
 
@@ -40,7 +40,7 @@
                 <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="Anyline" type="podspec" spec="55.6.0" />
+                <pod name="Anyline" type="podspec" spec="55.7.0" />
             </pods>
         </podspec>
 
