--- a/plugin/plugin.xml
+++ b/plugin/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    xmlns:android="http://schemas.android.com/apk/res/android" id="io-anyline-cordova" version="55.7.0">
+    xmlns:android="http://schemas.android.com/apk/res/android" id="io-anyline-cordova" version="55.8.1">
 
     <name>AnylineSDK</name>
 
@@ -35,12 +35,16 @@
         <!-- Anyline Framework & Resource Bundle CocoaPods-->
         <!-- <framework src="Anyline" type="podspec" swift-version="4.2" spec="~> 47.0"/> -->
 
+        <!-- Cordova-iOS 8+ uses Swift Package Manager (SPM) for dependencies.
+             If you want to use Cordova-iOS 8+, then disable the following "podspec" block.
+             The Anyline SDK is then loaded via Package.swift instead of CocoaPods to avoid conflicts.
+             For Cordova-iOS < 8.0, keep this podspec block enabled. -->
         <podspec>
             <config>
                 <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods use-frameworks="true">
-                <pod name="Anyline" type="podspec" spec="55.7.0" />
+                <pod name="Anyline" type="podspec" spec="55.8.1" />
             </pods>
         </podspec>
 
